# SimplePTZ

./: .gitignore  CMakeLists.txt  LICENSE  README.md  appicon.rc  mainwindow.cpp  mainwindow.h
