cmake_minimum_required(VERSION 3.16)
project(SimplePTZ LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
# Locate QT6 Locally
set(Qt6_DIR "E:/dev/qt-everywhere-src-6.9.2/qt-everywhere-src-6.9.2")
find_package(Qt6 REQUIRED COMPONENTS Widgets SerialPort)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)
if (WIN32)
    add_executable(SimplePTZ WIN32 main.cpp mainwindow.cpp mainwindow.h appicon.rc)
else()
    add_executable(SimplePTZ main.cpp mainwindow.cpp mainwindow.h)
endif()
target_link_libraries(SimplePTZ PRIVATE Qt6::Widgets Qt6::SerialPort)
